Applied correct markup

--- a/module/Olcs/view/layouts/search-result.phtml
+++ b/module/Olcs/view/layouts/search-result.phtml
@@ -8,11 +8,10 @@ echo $this->render(
     )
 );
 ?>
-<div class="one-third sidebar">
+<div class="one-quarter">
     <?php echo $this->partial('partials/search/search-left-column'); ?>
-</div><!-- .one-third.sidebar -->
+</div><!-- .one-quarter -->
 
-<div class="two-thirds">
-
+<div class="three-quarters">
     <?php echo $this->content; ?>
-</div><!-- .five-eights -->
+</div><!-- .three-quarters -->
