--- a/module/Olcs/view/partials/search/search-left-column.phtml
+++ b/module/Olcs/view/partials/search/search-left-column.phtml
@@ -1,18 +1,18 @@
-
-<h3><?php echo $this->translate('search-result-on-this-page'); ?></h3>
-
-<p>
-  <a href="#licence-details"><?php echo $this->translate('search-result-nav-licence-details'); ?></a>
-</p>
-<p>
-  <a href="#contact-details"><?php echo $this->translate('search-result-nav-contact-details'); ?></a>
-</p>
-<p>
-  <a href="#operating-centres"><?php echo $this->translate('search-result-nav-operating-centres'); ?></a>
-</p>
-<p>
-  <a href="#transport-managers"><?php echo $this->translate('search-result-nav-transport-managers'); ?></a>
-</p>
-<p>
-  <a href="#licence-details"><?php echo $this->translate('search-result-nav-related-operator-licences'); ?></a>
-</p>
+<h4><?php echo $this->translate('search-result-on-this-page'); ?></h4>
+<ul class="vertical-navigation">
+  <li>
+    <a href="#licence-details"><?php echo $this->translate('search-result-nav-licence-details'); ?></a>
+  </li>
+  <li>
+    <a href="#contact-details"><?php echo $this->translate('search-result-nav-contact-details'); ?></a>
+  </li>
+  <li>
+    <a href="#operating-centres"><?php echo $this->translate('search-result-nav-operating-centres'); ?></a>
+  </li>
+  <li>
+    <a href="#transport-managers"><?php echo $this->translate('search-result-nav-transport-managers'); ?></a>
+  </li>
+  <li>
+    <a href="#licence-details"><?php echo $this->translate('search-result-nav-related-operator-licences'); ?></a>
+  </li>
+</ul>
