--- a/module/Olcs/view/olcs/search/search-result.phtml
+++ b/module/Olcs/view/olcs/search/search-result.phtml
@@ -1,31 +1,78 @@
+<div class="read-only">
+    <div class="read-only__header">
+    <h4 id="licence-details" class="read-only__title">
+        <?php echo $this->translate(
+                'search-result-section-header-licence-details'
+            ) . ' (' . $this->result['licNo'] . ')';
+        ?></h4>
+    </div><!-- read-only__header -->
+    <?php
+        echo $this->partial('partials/search/licence-details');
+    ?>
+</div>
+
+<div class="read-only">
+    <div class="read-only__header">
+        <h4 id="contact-details" class="read-only__title"><?php echo $this->translate
+                ('search-result-section-header-contact-details');?></h4>
+    </div><!-- read-only__header -->
+    <?php
+        echo $this->partial('partials/search/contact-details');
+    ?>
+</div>
 
 <?php
-echo '<h3 id="licence-details">' . $this->translate('search-result-section-header-licence-details') .
-    ' (' . $this->result['licNo'] . ')</h3>';
-echo $this->partial('partials/search/licence-details');
-
-echo '<h3 id="contact-details">' . $this->translate('search-result-section-header-contact-details') . '</h3>';
-echo $this->partial('partials/search/contact-details');
-
-if (!empty($operatingCentresTable)) {
-    echo '<h3 id="operating-centres">' . $this->translate('search-result-section-header-operating-centres') . '</h3>';
-    echo $operatingCentresTable;
-}
-if (!empty($transportManagerTable)) {
-    echo '<h3 id="transport-managers">' . $this->translate
-        ('search-result-section-header-transport-managers') . '</h3>';
-    echo $transportManagerTable;
-}
-if (!empty($relatedOperatorLicencesTable)) {
-    echo '<h3 id="related-operator-licences">' . $this->translate('search-result-section-header-related-operator-licences') . '</h3>';
-    echo $relatedOperatorLicencesTable;
-}
-
+    if (!empty($operatingCentresTable)) {
+        ?>
+        <div class="read-only">
+            <div class="read-only__header">
+                <h4 id="operating-centres" class="read-only__title"><?php echo $this->translate
+                    ('search-result-section-header-operating-centres'); ?></h4>
+            </div>
+            <!-- read-only__header -->
+            <?php
+            echo $operatingCentresTable;
+            ?>
+        </div>
+        <?php
+    }
 ?>
 
-<p>
-<a href="#to-do"><?php echo $this->translate('search-result-nav-back-to-top');?></a>
-<a href="#to-do"><?php echo $this->translate('search-result-nav-back-to-operator-search');?></a>
-</p>
+<?php
+if (!empty($transportManagerTable)) {
+    ?>
+    <div class="read-only">
+        <div class="read-only__header">
+            <h4 id="transport-managers" class="read-only__title"><?php echo $this->translate
+                ('search-result-section-header-transport-managers'); ?></h4>
+        </div>
+        <!-- read-only__header -->
+        <?php
+        echo $transportManagerTable;
+        ?>
+    </div>
+    <?php
+}
+?>
 
+<?php
+if (!empty($relatedOperatorLicencesTable)) {
+    ?>
+    <div class="read-only">
+        <div class="read-only__header">
+            <h4 id="related-operator-licences" class="read-only__title"><?php echo $this->translate
+                ('search-result-section-header-related-operator-licences'); ?></h4>
+        </div>
+        <!-- read-only__header -->
+        <?php
+        echo $relatedOperatorLicencesTable;
+        ?>
+    </div>
+    <?php
+}
+?>
 
+<div class="actions-container">
+    <a href="#to-do"><?php echo $this->translate('search-result-nav-back-to-top');?></a>
+    <a href="#to-do"><?php echo $this->translate('search-result-nav-back-to-operator-search');?></a>
+</div>
