--- a/module/Olcs/view/partials/entity-view/partner-licence-details.phtml
+++ b/module/Olcs/view/partials/entity-view/partner-licence-details.phtml
@@ -1,4 +1,5 @@
 <?php
+
 $items = [];
 if (!empty($this->result['organisation']['tradingNames'])) {
     for($i = 0; $i<count($this->result['organisation']['tradingNames']);$i++) {
@@ -55,8 +56,30 @@ if (!empty($this->result['directors'])) {
 }
 $items[] = $directorsList;
 
-$licenceStartDate = isset($this->result['licenceStartDate']) ? $this->result['licenceStartDate'] : '';
 $licenceType = isset($this->result['licenceType']['description']) ? $this->result['licenceType']['description'] : '';
+$licenceReviewDate = isset($this->result['reviewDate']) ? $this->result['reviewDate'] : '';
+
+$totalVehicleAuthority = isset($this->result['totalAuthVehicles']) ? $this->result['totalAuthVehicles'] : '';
+$vehiclesInPossession = isset($this->result['totalVehiclesInPossession']) ?
+    $this->result['totalVehiclesInPossession'] : '';
+$totalTrailerAuthority = isset($this->result['totalAuthTrailers']) ? $this->result['totalAuthTrailers'] : '';
+$trailersInPossession = isset($this->result['trailersInPossession']) ? $this->result['trailersInPossession'] : '';
+
+$totalPiRecords = isset($this->result['totalPiRecords']) ? $this->result['totalPiRecords'] : '';
+$isDisqualified = isset($this->result['isDisqualified']) ? $this->result['isDisqualified'] : 'TODO';
+
+$activeCommunityLicences = isset($this->result['activeCommunityLicences']) ?
+    $this->result['activeCommunityLicences'] : '';
+
+$multipleLicenceHolder = isset($this->result['otherLicences']) && count($this->result['otherLicences']) > 0 ?
+    'Y' : 'N';
+
+$leadTrafficCommissioner = isset($this->result['organisation']['leadTcArea']['contactDetails']['person']) ?
+    $this->personName($this->result['organisation']['leadTcArea']['contactDetails']['person']) : '';
+
+$trafficArea = isset($this->result['trafficArea']['description']) ? $this->result['trafficArea']['description'] : '';
+
+$licenceStartDate = isset($this->result['inForceDate']) ? $this->result['inForceDate'] : '';
 $licenceStatus = isset($this->result['status']['description']) ? $this->result['status']['description'] : '';
 $continuationDate = isset($this->result['expiryDate']) ? $this->result['expiryDate'] : '';
 $trafficArea = isset($this->result['trafficArea']['name']) ? $this->result['trafficArea']['name'] : '';
@@ -68,6 +91,8 @@ echo $this->render('partials/read-only/main',
                 $items,
                 [
                     3 => [
+                        ['label' => 'search-result-label-licence-start-date', 'value' => $licenceStartDate],
+                        ['label' => 'search-result-label-licence-review-date', 'value' => $licenceReviewDate],
                         ['label' => 'search-result-label-licence-type', 'value' => $licenceType],
                         ['label' => 'search-result-label-licence-status', 'value' => $licenceStatus],
                         [
@@ -77,6 +102,27 @@ echo $this->render('partials/read-only/main',
                         ]
                     ],
                     4 => [
+                        ['label' => 'search-result-label-vauth', 'value' => $totalVehicleAuthority],
+                        ['label' => 'search-result-label-vip', 'value' => $vehiclesInPossession],
+                        ['label' => 'search-result-label-tauth', 'value' => $totalTrailerAuthority],
+                        ['label' => 'search-result-label-tip', 'value' => $trailersInPossession],
+                    ],
+                    5 => [
+                        ['label' => 'search-result-label-existing-pi', 'value' => $totalPiRecords],
+                        ['label' => 'search-result-label-operator-disqualified', 'value' =>
+                            $isDisqualified],
+                        [
+                            'label' => 'search-result-label-total-community-licences',
+                            'value' => $activeCommunityLicences
+                        ],
+                        [
+                            'label' => 'search-result-label-multiple-licence-holder',
+                            'type' => 'yesno',
+                            'value' => $multipleLicenceHolder
+                        ],
+                    ],
+                    6 => [
+                        ['label' => 'search-result-label-lead-tc', 'value' => $leadTrafficCommissioner],
                         ['label' => 'search-result-label-traffic-area', 'value' => $trafficArea],
                     ]
                 ]
