Added partner navigation

--- a/module/Olcs/view/layouts/entity-view.phtml
+++ b/module/Olcs/view/layouts/entity-view.phtml
@@ -9,7 +9,7 @@ echo $this->render(
 );
 ?>
 <div class="one-quarter">
-    <?php echo $this->partial('partials/entity-view/search-left-column'); ?>
+    <?php echo $this->partial('partials/entity-view/entity-details-nav-' . $this->userType); ?>
 </div><!-- .one-quarter -->
 
 <div class="three-quarters">
