--- a/module/Olcs/view/olcs/entity/licence/partner.phtml
+++ b/module/Olcs/view/olcs/entity/licence/partner.phtml
@@ -2,7 +2,7 @@
     <div class="read-only__header">
         <h4 id="licence-details" class="read-only__title">
             <?php echo $this->translate(
-                    'search-result-section-header-licence-details'
+                    'entity-details-section-header-licence-details'
                 ) . ' (' . $this->result['licNo'] . ')';
             ?></h4>
     </div><!-- read-only__header -->
@@ -14,7 +14,7 @@
 <div class="read-only">
     <div class="read-only__header">
         <h4 id="contact-details" class="read-only__title"><?php echo $this->translate
-            ('search-result-section-header-contact-details');?></h4>
+            ('entity-details-section-header-contact-details');?></h4>
     </div><!-- read-only__header -->
     <?php
     echo $this->partial('partials/entity-view/partner-contact-details');
@@ -23,7 +23,7 @@
 
 <div class="read-only">
     <div class="read-only__header">
-        <h4 id="contact-details" class="read-only__title"><?php echo $this->translate
+        <h4 id="contact" class="read-only__title"><?php echo $this->translate
             ('entity-view-section-header-registered-company-details');?></h4>
     </div><!-- read-only__header -->
     <?php
@@ -37,7 +37,7 @@ if (!empty($operatingCentresTable)) {
     <div class="read-only">
         <div class="read-only__header">
             <h4 id="operating-centres" class="read-only__title"><?php echo $this->translate
-                ('search-result-section-header-operating-centres'); ?></h4>
+                ('entity-details-section-header-operating-centres'); ?></h4>
         </div>
         <!-- read-only__header -->
         <?php
@@ -54,7 +54,7 @@ if (!empty($transportManagerTable)) {
     <div class="read-only">
         <div class="read-only__header">
             <h4 id="transport-managers" class="read-only__title"><?php echo $this->translate
-                ('search-result-section-header-transport-managers'); ?></h4>
+                ('entity-details-section-header-transport-managers'); ?></h4>
         </div>
         <!-- read-only__header -->
         <?php
@@ -71,7 +71,7 @@ if (!empty($relatedOperatorLicencesTable)) {
     <div class="read-only">
         <div class="read-only__header">
             <h4 id="related-operator-licences" class="read-only__title"><?php echo $this->translate
-                ('search-result-section-header-related-operator-licences'); ?></h4>
+                ('entity-details-section-header-related-operator-licences'); ?></h4>
         </div>
         <!-- read-only__header -->
         <?php
@@ -87,8 +87,8 @@ if (!empty($vehiclesTable)) {
     ?>
     <div class="read-only">
         <div class="read-only__header">
-            <h4 id="related-operator-licences" class="read-only__title"><?php echo $this->translate
-                ('search-result-section-header-vehicles'); ?></h4>
+            <h4 id="vehicles" class="read-only__title"><?php echo $this->translate
+                ('entity-details-section-header-vehicles'); ?></h4>
         </div>
         <!-- read-only__header -->
         <?php
@@ -104,8 +104,8 @@ if (!empty($currentApplicationsTable)) {
     ?>
     <div class="read-only">
         <div class="read-only__header">
-            <h4 id="related-operator-licences" class="read-only__title"><?php echo $this->translate
-                ('search-result-section-header-current-applications'); ?></h4>
+            <h4 id="current-applications" class="read-only__title"><?php echo $this->translate
+                ('entity-details-section-header-current-applications'); ?></h4>
         </div>
         <!-- read-only__header -->
         <?php
@@ -121,8 +121,8 @@ if (!empty($conditionsUndertakingsTable)) {
     ?>
     <div class="read-only">
         <div class="read-only__header">
-            <h4 id="related-operator-licences" class="read-only__title"><?php echo $this->translate
-                ('search-result-section-header-conditions-undertakings'); ?></h4>
+            <h4 id="conditions-undertakings" class="read-only__title"><?php echo $this->translate
+                ('entity-details-section-header-conditions-undertakings'); ?></h4>
         </div>
         <!-- read-only__header -->
         <?php
@@ -133,6 +133,6 @@ if (!empty($conditionsUndertakingsTable)) {
 }
 ?>
 <div class="actions-container">
-    <a href="#to-do"><?php echo $this->translate('search-result-nav-back-to-top');?></a>
-    <a href="#to-do"><?php echo $this->translate('search-result-nav-back-to-operator-search');?></a>
+    <a href="#to-do"><?php echo $this->translate('entity-details-nav-back-to-top');?></a>
+    <a href="#to-do"><?php echo $this->translate('entity-details-nav-back-to-operator-search');?></a>
 </div>
