--- a/module/Olcs/view/partials/entity-view/entity-details-nav-anonymous.phtml
+++ b/module/Olcs/view/partials/entity-view/entity-details-nav-anonymous.phtml
@@ -13,6 +13,7 @@
     <a href="#transport-managers"><?php echo $this->translate('search-result-nav-transport-managers'); ?></a>
   </li>
   <li>
-    <a href="#licence-details"><?php echo $this->translate('search-result-nav-related-operator-licences'); ?></a>
+    <a href="#related-operator-licences"><?php echo $this->translate('search-result-nav-related-operator-licences');
+    ?></a>
   </li>
 </ul>
