Search indexes for Selfserve

--- a/module/Olcs/view/index.phtml
+++ b/module/Olcs/view/index.phtml
@@ -19,8 +19,8 @@
       <li class="search-navigation__item"><a href="<?php echo $this->url('search', ['index'=> 'person']); ?>">Find people</a></li>
       <li class="search-navigation__item"><a href="<?php echo $this->url('search', ['index'=> 'operator']); ?>">Vehicle Operator details</a></li>
       <li class="search-navigation__item"><a href="<?php echo $this->url('search', ['index'=> 'bus']); ?>">Bus registrations</a></li>
-      <li class="search-navigation__item"><a href="<?php echo $this->url('search', ['index'=> 'traffic-commissioner']); ?>">Traffic Commissioner publications</a></li>
-      <li class="search-navigation__item"><a href="<?php echo $this->url('search', ['index'=> 'vehicle']); ?>">Vehicles</a></li>
+      <li class="search-navigation__item"><a href="<?php echo $this->url('search', ['index'=> 'traffic-commissioner-publication']); ?>">Traffic Commissioner publications</a></li>
+      <li class="search-navigation__item"><a href="<?php echo $this->url('search', ['index'=> 'vehicle-external']); ?>">Vehicles</a></li>
 
     </ul>
   </div>
