--- a/module/Olcs/view/olcs/entity/licence/partner.phtml
+++ b/module/Olcs/view/olcs/entity/licence/partner.phtml
@@ -3,7 +3,7 @@
         <h4 id="licence-details" class="read-only__title">
             <?php echo $this->translate(
                     'entity-details-section-header-licence-details'
-                ) . ' (' . $this->result['licNo'] . ')';
+                ) . ' (' . $this->escapeHtml($this->result['licNo']) . ')';
             ?></h4>
     </div><!-- read-only__header -->
     <?php
