--- a/module/Olcs/view/layouts/base.phtml
+++ b/module/Olcs/view/layouts/base.phtml
@@ -59,7 +59,9 @@
         <ul class="global-footer__links">
           <li class="global-footer__link"><a href="">Helpdesk</a></li>
           <li class="global-footer__link"><a href="">Privacy &amp; cookies</a></li>
-          <li class="global-footer__link"><a href="">Cymraeg</a></li>
+          <li class="global-footer__link">
+              <?php echo $this->languageLink(); ?>
+          </li>
           <li class="global-footer__link">Built by <a href="https://www.gov.uk/government/organisations/driver-and-vehicle-standards-agency">Driver &amp; Vehicle Standards Agency</a></li>
         </ul>
         <div class="global-footer__copyright">
