OLCS-10407 tweak selfserve to use modified backend

--- a/module/Olcs/view/partials/fees/payment-details.phtml
+++ b/module/Olcs/view/partials/fees/payment-details.phtml
@@ -11,7 +11,7 @@
                 // 'paid by' descoped from OLCS-8792
                 [
                     'label' => 'pay-fees.success.payment-reference',
-                    'value' => $payment['guid'],
+                    'value' => $payment['reference'],
                 ],
                 [
                     'label' => 'pay-fees.success.received',
