--- a/module/Olcs/view/layouts/main-search-results.phtml
+++ b/module/Olcs/view/layouts/main-search-results.phtml
@@ -22,7 +22,8 @@ $results = $this->results;
     </div>
 
     <div class="three-eigths">
-        <h2>Edit Search</h2>
+        <h3>Edit search</h3>
+
         <?php echo $this->form($this->placeholder('searchFilter')->getValue()) ?>
 
     </div><!-- three-eights -->
