--- a/module/Olcs/view/layouts/entity-view.phtml
+++ b/module/Olcs/view/layouts/entity-view.phtml
@@ -8,10 +8,12 @@ echo $this->render(
     )
 );
 ?>
+<?php /*
 <div class="one-quarter">
     <?php echo $this->partial('partials/entity-view/entity-details-nav-' . $this->userType); ?>
 </div><!-- .one-quarter -->
+ */ ?>
 
-<div class="three-quarters">
+<div class="full-width">
     <?php echo $this->content; ?>
 </div><!-- .three-quarters -->
