--- a/module/Olcs/view/pages/licence-page.phtml
+++ b/module/Olcs/view/pages/licence-page.phtml
@@ -21,7 +21,7 @@
     }
 
     echo $content; ?>
-    <a href="<?php echo $this->url('lva-licence', [], [], true); ?>">
+    <a href="<?php echo $this->url('lva-licence', [], [], true); ?>" class="action--primary large">
         <?php echo $this->translate('back-to-licence-overview'); ?>
     </a>
 </div>
