Moved all data service code into DTOs

--- a/module/Olcs/view/olcs/bus-registration/details.phtml
+++ b/module/Olcs/view/olcs/bus-registration/details.phtml
@@ -95,7 +95,7 @@ echo $this->render('partials/read-only/main',
             8 => $localAuthoritiesList,
             9 => $trafficAreasList,
             10 => [
-                ['label' => 'N&P Reference', 'value' => $this->registrationDetails['npRreferenceNo']]
+                ['label' => 'N&P Reference', 'value' => $this->registrationDetails['npPublicationNo']]
             ]
         ]
     ]
