OLCS-10681 - ss story for user admin

--- a/module/Olcs/view/layouts/base.phtml
+++ b/module/Olcs/view/layouts/base.phtml
@@ -44,7 +44,7 @@
         <p class="phase"><span class="phase__tag">alpha</span><span class="phase__message">This is a new service – <a href="https://www.surveymonkey.com/s/T8NGJV8">help us improve it.</a></span></p>
         <ul class="user-menu">
           <li class="user-menu__item"><?php echo $this->currentUser()->getFullName() ?>, <b>Operator Licensing Ltd.</b></li>
-          <li class="user-menu__item"><a href="<?php echo $this->url('my-details');?>">My details</a></li>
+          <li class="user-menu__item"><a href="<?php echo $this->url('my-details');?>">My account</a></li>
           <li class="user-menu__item"><a href="<?php echo $this->url('zfcuser/logout');?>">Sign out</a></li>
         </ul>
       </div><!-- end .user-header -->
