OLCS-10697 Replace ampersand with and (as per GDS guidelines)

--- a/module/Olcs/view/layouts/base.phtml
+++ b/module/Olcs/view/layouts/base.phtml
@@ -59,11 +59,11 @@
       <div class="global-footer__wrapper">
         <ul class="global-footer__links">
           <li class="global-footer__link"><a href="">Helpdesk</a></li>
-          <li class="global-footer__link"><a href="">Privacy &amp; cookies</a></li>
+          <li class="global-footer__link"><a href="">Privacy and cookies</a></li>
           <li class="global-footer__link">
               <?php echo $this->languageLink(); ?>
           </li>
-          <li class="global-footer__link">Built by <a href="https://www.gov.uk/government/organisations/driver-and-vehicle-standards-agency">Driver &amp; Vehicle Standards Agency</a></li>
+          <li class="global-footer__link">Built by <a href="https://www.gov.uk/government/organisations/driver-and-vehicle-standards-agency">Driver and Vehicle Standards Agency</a></li>
         </ul>
         <div class="global-footer__copyright">
           <a href="">&copy; Crown copyright</a>
