--- a/module/Olcs/view/layouts/simple.phtml
+++ b/module/Olcs/view/layouts/simple.phtml
@@ -10,11 +10,9 @@
         <meta charset="utf-8">
         <?php echo $this->headTitle($this->translate('')); ?>
 
-        <?php echo $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1.0')->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
-        ?>
-
-        <?php /* echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico')); */
-                echo $this->headLink()->appendStylesheet($this->basePath() . '/static/stylesheets/main.css') ?>
+        <?php echo $this->headMeta() ->appendName('viewport', 'width=device-width, initial-scale=1.0') ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')?>
+        <?php echo $this->headLink()->appendStylesheet($this->assetPath('/styles/' . $this->applicationName() . '.css'), ['media' => 'screen,print']) ?>
+        <?php echo $this->headScript(); ?>
 
     </head>
 
